<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_game"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@drawable/start_game_btn"
        android:text="@string/start_game_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_score"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@drawable/normal_btn"
        android:text="@string/show_score_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game"
        app:layout_constraintVertical_bias="0.10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_back"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@drawable/back_ok_btn"
        android:text="@string/go_back_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_score"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>